@@ -1,0 +1,18 @@
+#pragma once
+
+#include "IMusicInfoTagLoader.h"
+
+using namespace MUSIC_INFO;
+
+namespace MUSIC_INFO
+{
+
+class CMusicInfoTagLoaderSHN: public IMusicInfoTagLoader
+{
+public:
+  CMusicInfoTagLoaderSHN(void);
+  virtual ~CMusicInfoTagLoaderSHN();
+
+  virtual bool Load(const CStdString& strFileName, CMusicInfoTag& tag);
+};
+};
