@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 08-05-2005 added: Shorten (.shn) support to paplayer.
   - 07-05-2005 changed: Rewrote the threaded filereader class - now just uses a single ringbuffer technique.
   - 07-05-2005 updated: Italian language file (Thnx to kotix)
   - 07-05-2005 updated: Norwegian language file (Thnx to vnm)
